<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

	xmlns:tools="http://schemas.android.com/tools"

	android:layout_width="match_parent"

	android:layout_height="match_parent"

	tools:context=".MainActivity" >

	<TextView

  	android:id="@+id/textView1"

  	android:layout_width="wrap_content"

  	android:layout_height="wrap_content"

  	android:layout_centerHorizontal="true"

  	android:text="@string/hello_world" />

	<LinearLayout

  	android:id="@+id/linearlayout"

  	android:layout_width="wrap_content"

  	android:layout_height="wrap_content"

  	android:layout_alignParentLeft="true"

  	android:layout_centerVertical="true"

  	android:layout_marginLeft="44dp"

  	android:orientation="vertical" >

  	

	</LinearLayout>

	<EditText
	    android:id="@+id/firstname"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentLeft="true"
	    android:layout_below="@+id/textView1"
	    android:layout_marginTop="24dp"
	    android:ems="10"
	    android:text="@string/firstname"
	    tools:ignore="TextFields,HardcodedText" >

  	<requestFocus />

	</EditText>

	<EditText
	    android:id="@+id/lastname"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentLeft="true"
	    android:layout_below="@+id/firstname"
	    android:ems="10"
	    android:inputType="textPersonName"
	    android:text="@string/lastname"
	    tools:ignore="HardcodedText" />

	<TextView
	    android:id="@+id/sex"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentLeft="true"
	    android:layout_below="@+id/lastname"
	    android:layout_marginTop="14dp"
	    android:text="@string/sex"
	    android:textAppearance="?android:attr/textAppearanceMedium"
	    tools:ignore="HardcodedText" />

	<RadioButton
	    android:id="@+id/male"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignTop="@+id/sex"
	    android:layout_toLeftOf="@+id/textView1"
	    android:text="@string/male"
	    tools:ignore="HardcodedText" />

	<RadioButton
	    android:id="@+id/female"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignBottom="@+id/male"
	    android:layout_alignLeft="@+id/textView1"
	    android:layout_alignTop="@+id/male"
	    android:layout_marginLeft="27dp"
	    android:text="@string/female"
	    tools:ignore="HardcodedText" />

	<EditText
	    android:id="@+id/phone"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentLeft="true"
	    android:layout_below="@+id/male"
	    android:ems="10"
	    android:inputType="phone"
	    android:text="@string/phone"
	    tools:ignore="HardcodedText" />

	<EditText
	    android:id="@+id/email"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentLeft="true"
	    android:layout_below="@+id/phone"
	    android:ems="10"
	    android:inputType="textEmailAddress"
	    android:text="@string/email"
	    tools:ignore="HardcodedText" />

	<Button
	    android:id="@+id/submit"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignLeft="@+id/male"
	    android:layout_below="@+id/email"
	    android:layout_marginLeft="24dp"
	    android:layout_marginTop="20dp"
	    android:text="@string/submit"
	    tools:ignore="HardcodedText" />

</RelativeLayout>

